[package]
name = "medit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui_code_editor = "0.1.8"
egui_extras = "0.23.0"
egui_file = "0.11.0"
env_logger = "0.10.0"
pulldown-cmark = "0.9.3"
